--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,36 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {
+  font-family: 'Montserrat';
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.cards {
+
+  margin: 50px 100px;
+  padding: 50px 2%;
+  background: #F7F7F7;
+  border-radius: 25px;
 }
+
+#error-page {
+  color: #FF6060;
+  text-align: center;
+  font-size: 36px;
+  font-weight: 500;
+  line-height: 51px;
+  letter-spacing: 0em;
+}
+#error-page a {
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 26px;
+  color: #FF6060;
+}
+.error-number {
+font-size: 288px;
+font-weight: 700;
+line-height: 411px;
+}
+.error-link {
+  padding: 150px;
+}
+
+
