--- a/src/styles/Card.css
+++ b/src/styles/Card.css
@@ -1,29 +1,46 @@
+
 .cards-container {
     display: flex;
+    flex-direction: row;
     flex-wrap: wrap;
 }
 
 .card {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    height: auto;
-    width: 25%;
-    background: linear-gradient(0deg, rgb(128, 45, 45) 0%,  rgb(255, 96, 96) 100%);
+    width: 300px;
+    height: 300px;
     border-radius: 10px;
     margin-inline: 4%;
     margin-block: 25px;
 }
+.card a{
+    display: flex;
+    position: relative;
+    flex-direction: column;
+    justify-content: end;
 
+    width: 300px;
+    height: 300px;
+}
 .card-text {
+    display: flex;
+    position: absolute;
+    flex-wrap: wrap;
+    z-index: 1;
     font-size: 18px;
     font-weight: 500;
     line-height: 26px;
     letter-spacing: 0em;
     padding: 20px;
-    color:white;
+    color: white;
+    width: 70%;
+
     }
 
 .card-img {
-    border-radius: 10px 10px 0px 0px;
+
+    border-radius: 10px;
+    height: 100%;
+    object-fit: cover;
+    filter: brightness(70%);
+
 }
