--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -20,3 +20,28 @@
     line-height: 34px;
     padding: 30px;
   }
+  @media screen and (max-width: 800px) {
+    .footer-txt {
+      font-size: 20px;
+    }
+  }
+  @media screen and (max-width: 700px) {
+    .footer-txt {
+      font-size: 18px;
+    }
+  }
+  @media screen and (max-width: 600px) {
+    .footer-txt {
+      font-size: 16px;
+    }
+  }
+  @media screen and (max-width: 500px) {
+    .footer-txt {
+      font-size: 14px;
+    }
+  }
+  @media screen and (max-width: 450px) {
+    .footer-txt {
+      font-size: 12px;
+    }
+  }
