--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -5,14 +5,14 @@
   justify-content: space-between;
   margin: 50px 100px;
 }
-.header-logo {
-  width: 210px;
-  height: auto;
+.header-nav {
+  display: flex;
+  justify-content: end;
 }
 .header-nav ul {
   display: flex;
   flex-direction: row;
-  padding-inline-start: 50px;;
+  justify-content: space-between;
 }
 .header-nav li {
   list-style-type: none;
@@ -25,4 +25,55 @@
 .header-nav li a {
   text-decoration: none;
   color:#FF6060;
+}
+@media screen and (max-width: 800px) {
+  .header{
+    margin: 40px 80px;
+  }
+  .header img {
+    width: 190px;
+  }
+  .header-nav li {
+    font-size: 20px;
+  }
+}
+@media screen and (max-width: 700px) {
+  .header{
+    margin: 30px 60px;
+  }
+  .header img {
+    width: 190px;
+  }
+  .header-nav li {
+    font-size: 16px;
+  }
+}
+@media screen and (max-width: 600px) {
+  .header{
+    margin: 20px 40px;
+  }
+  .header img {
+    width: 150px;
+  }
+  .header-nav li {
+    font-size: 14px;
+    margin-inline-start: 25px;
+  }
+}
+@media screen and (max-width: 500px) {
+  .header{
+    margin: 15px 30px;
+  }
+}
+@media screen and (max-width: 450px) {
+  .header{
+    margin: 10px 20px;
+  }
+  .header img {
+    width: 120px;
+  }
+  .header-nav li {
+    font-size: 12px;
+    margin-inline-start: 10px;
+  }
 }
