Update kasa project

--- a/src/styles/Collapse.css
+++ b/src/styles/Collapse.css
@@ -168,7 +168,9 @@ list-style: none;
     padding: 30px 20px;
     color: #FF6060;
 }
-
+.fa-brands {
+    color: #FF6060;
+}
 @media screen and (max-width: 800px) {
     .about-article {
         margin: 0px 80px;
