--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -20,6 +20,9 @@
     line-height: 34px;
     padding: 30px;
   }
+  .fa-brands {
+    color: white;
+  }
   @media screen and (max-width: 800px) {
     .footer-txt {
       font-size: 20px;
