--- a/src/index.css
+++ b/src/index.css
@@ -2,72 +2,64 @@
   font-family: 'Montserrat';
 }
 #error-page {
-  color: #FF6060;
+  color: #0e2c63;
   text-align: center;
-  font-size: 36px;
+  font-size: 30px;
   font-weight: 500;
   line-height: 51px;
   letter-spacing: 0em;
 }
-
-.error-number {
-font-size: 288px;
-font-weight: 700;
-line-height: 411px;
+.err-img {
+  height: 500px;
+  width: auto;
 }
 .error-link {
-  padding: 150px 0px;
+  padding: 80px 0px;
 }
 .error-link a {
   font-size: 18px;
   font-weight: 500;
   line-height: 26px;
-  color: #FF6060;
+  color: #0e2c63;
 }
 @media screen and (max-width: 800px) {
-  .error-number {
-    font-size: 245px;
+    .err-img {
+      height: 450px;
     }
     #error-page {
-      font-size: 30px;
+      font-size: 26px;
     }
 }
 @media screen and (max-width: 700px) {
-  .error-number {
-    font-size: 210px;
+    .err-img {
+      height: 400px;
     }
     #error-page {
-      font-size: 24px;
+      font-size: 22px;
     }
     .error-link a {
-      font-size: 16px;
+      font-size: 14px;
+      padding: 60px 0px;
     }
 }
 @media screen and (max-width: 600px) {
-  .error-number {
-    font-size: 180px;
+    .err-img {
+    height: 350px;
     }
     #error-page {
-      font-size: 20px;
-    }
-}
-@media screen and (max-width: 500px) {
-  .error-number {
-    font-size: 150px;
-    }
-    #error-page {
-      font-size: 16px;
+      font-size: 18px;
     }
 }
 @media screen and (max-width: 450px) {
-  .error-number {
-    font-size: 136.9px;
+    .err-img {
+    height: 300px;
     }
     #error-page {
       font-size: 14px;
     }
   .error-link a {
-    font-size: 14px;
+    font-size: 10px;
+    padding: 40px 0px;
   }
 }
 
