--- a/src/styles/Card.css
+++ b/src/styles/Card.css
@@ -1,7 +1,7 @@
 .cards {
     margin: 50px 100px;
     padding: 50px 2%;
-    background: #F7F7F7;
+    background: #0e2c6313;
     border-radius: 25px;
   }
 .cards-container {
@@ -17,7 +17,6 @@
     width: 85%;
     height: 100%;
     border-radius: 10px;
-
 }
 .card a{
     display: flex;
@@ -36,7 +35,6 @@
     font-weight: 500;
     line-height: 26px;
     letter-spacing: 0em;
-
     color: white;
     width: 95%;
     height: 95%;
@@ -46,10 +44,8 @@
     padding-bottom: 5%;
     }
 .card-img {
-
     border-radius: 10px;
     height: 100%;
-
     background-size: cover;
     background-position: center;
 
