--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -1,5 +1,5 @@
 .footer{
-    background-color:black;
+    background-color:#807e7e;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -8,43 +8,65 @@
     left: 0px;
     width: 100%;
   }
-  .footer-logo {
-    width: 122px;
-    height: auto;
-    padding-top: 60px;
-  }
   .footer-txt {
     color: white;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 34px;
+    padding: 15px;
+  }
+  .footer-link {
+    color: white;
+    text-decoration: none;
     font-size: 24px;
     font-weight: 500;
     line-height: 34px;
-    padding: 30px;
+    padding: 15px;
   }
-  .fa-brands {
-    color: white;
+  .footer-icons {
+    display: flex;
+    width: 80%;
+    font-size: 24px;
+    padding: 15px;
+    justify-content: space-evenly;
   }
-  @media screen and (max-width: 800px) {
-    .footer-txt {
+@media screen and (max-width: 800px) {
+    .footer-link,  .footer-icons {
       font-size: 20px;
     }
-  }
-  @media screen and (max-width: 700px) {
-    .footer-txt {
-      font-size: 18px;
-    }
-  }
-  @media screen and (max-width: 600px) {
-    .footer-txt {
-      font-size: 16px;
-    }
-  }
-  @media screen and (max-width: 500px) {
     .footer-txt {
       font-size: 14px;
     }
   }
-  @media screen and (max-width: 450px) {
+@media screen and (max-width: 700px) {
+    .footer-link,  .footer-icons {
+      font-size: 18px;
+    }
     .footer-txt {
       font-size: 12px;
+    }
+  }
+@media screen and (max-width: 600px) {
+  .footer-link,  .footer-icons {
+      font-size: 16px;
+    }
+    .footer-txt {
+      font-size: 10px;
+    }
+  }
+@media screen and (max-width: 500px) {
+    .footer-link,  .footer-icons {
+      font-size: 14px;
+    }
+    .footer-txt {
+      font-size: 8px;
+    }
+  }
+@media screen and (max-width: 450px) {
+    .footer-link,  .footer-icons {
+      font-size: 12px;
+    }
+    .footer-txt {
+      font-size: 6px;
     }
   }
