--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -5,6 +5,13 @@
   justify-content: space-between;
   margin: 50px 100px;
 }
+.header a {
+  text-decoration: none;
+  color:#0e2c63;
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 34px;
+}
 .header-nav {
   display: flex;
   justify-content: flex-end;
@@ -16,35 +23,43 @@
 }
 .header-nav li {
   list-style-type: none;
-  color:#FF6060;
-  font-size: 24px;
+  color:#0e2c63;
+  font-size: 20px;
   font-weight: 500;
   line-height: 34px;
-  margin-inline-start: 50px;
+  margin-inline-start: 30px;
+}
+.header-nav li a:hover {
+  font-size: 22px;
 }
 .header-nav li a {
   text-decoration: none;
-  color:#FF6060;
+  color:#0e2c63;
+}
+@media screen and (max-width: 950px) {
+  .header-nav li {
+    margin-inline-start: 24px;
+  }
 }
 @media screen and (max-width: 800px) {
   .header{
     margin: 40px 80px;
   }
-  .header img {
-    width: 190px;
+  .header-nav li, .header a {
+    font-size: 16px;
   }
-  .header-nav li {
-    font-size: 20px;
+  .header-nav li a:hover {
+    font-size: 18px;
   }
 }
 @media screen and (max-width: 700px) {
   .header{
     margin: 30px 60px;
   }
-  .header img {
-    width: 190px;
+  .header-nav li, .header a {
+    font-size: 14px;
   }
-  .header-nav li {
+  .header-nav li a:hover {
     font-size: 16px;
   }
 }
@@ -52,12 +67,14 @@
   .header{
     margin: 20px 40px;
   }
-  .header img {
-    width: 150px;
+  .header-nav li, .header a {
+    font-size: 12px;
   }
-  .header-nav li {
+  .header-nav li{
+    margin-inline-start: 8px;
+  }
+  .header-nav li a:hover {
     font-size: 14px;
-    margin-inline-start: 25px;
   }
 }
 @media screen and (max-width: 500px) {
@@ -69,11 +86,13 @@
   .header{
     margin: 10px 20px;
   }
-  .header img {
-    width: 120px;
+  .header-nav li, .header a {
+    font-size: 10px;
   }
-  .header-nav li {
+  .header-nav li{
+    margin-inline-start: 6px;
+  }
+  .header-nav li a:hover {
     font-size: 12px;
-    margin-inline-start: 10px;
   }
 }
