--- a/src/styles/Slideshow.css
+++ b/src/styles/Slideshow.css
@@ -1,5 +1,9 @@
+.slideshow {
+  display: flex;
+  justify-content: center;
+}
 .containerStyles {
-  width: auto;
+  width: 65%;
   height: 415px;
   margin: 0px 100px;
 }
@@ -7,16 +11,17 @@
     width: 100%;
     height: 100%;
     border-radius: 10px;
-    background-size: cover;
+    background-size: contain;
+    background-repeat: no-repeat;
     background-position: center;
 }
 .fa-angle-right{
     position: absolute;
     top: 50%;
     transform: translate(0, -50%);
-    right: 32px;
+    right: -20px;
     font-size: 45px;
-    color: #fff;
+    color: #344563;
     z-index: 1;
     cursor: pointer;
   }
@@ -25,9 +30,9 @@
     position: absolute;
     top: 50%;
     transform: translate(0, -50%);
-    left: 32px;
+    left: -20px;
     font-size: 45px;
-    color: #fff;
+    color: #344563;
     z-index: 1;
     cursor: pointer;
   }
@@ -39,38 +44,41 @@
     position: relative;
     display: flex;
     justify-content: center;
-    bottom: 45px;
+    bottom: -20px;
     font-size: 18px;
     z-index: 1;
-    color: white;
+    color: 344563;
+  }
+  @media screen and (max-width: 900px) {
+    .containerStyles {
+      width: 70%;
+    }
   }
   @media screen and (max-width: 800px) {
     .containerStyles {
+      width: 75%;
       height: 385px;
       margin: 0px 80px;
     }
   }
   @media screen and (max-width: 700px) {
     .containerStyles {
+      width: 80%;
       height: 350px;
       margin: 0px 60px;
     }
   }
   @media screen and (max-width: 600px) {
     .containerStyles {
+      width: 85%;
       height: 315px;
       margin: 0px 40px;
     }
   }
   @media screen and (max-width: 500px) {
     .containerStyles {
+      width: 90%;
       height: 290px;
       margin: 0px 30px;
-    }
-  }
-  @media screen and (max-width: 450px) {
-    .containerStyles {
-      height: 255px;
-      margin: 0px 20px;
     }
   }
