--- a/src/styles/Slideshow.css
+++ b/src/styles/Slideshow.css
@@ -19,7 +19,7 @@
     position: absolute;
     top: 50%;
     transform: translate(0, -50%);
-    right: -20px;
+    right: -30px;
     font-size: 45px;
     color: #344563;
     z-index: 1;
@@ -30,7 +30,7 @@
     position: absolute;
     top: 50%;
     transform: translate(0, -50%);
-    left: -20px;
+    left: -30px;
     font-size: 45px;
     color: #344563;
     z-index: 1;
@@ -44,14 +44,27 @@
     position: relative;
     display: flex;
     justify-content: center;
-    bottom: -20px;
+    bottom: 0px;
     font-size: 18px;
     z-index: 1;
     color: 344563;
   }
+  @media screen and (max-width: 1200px) {
+    .slideCount{
+      bottom: 10px;
+    }
+  }
+  @media screen and (max-width: 1000px) {
+    .slideCount{
+      bottom: 20px;
+    }
+  }
   @media screen and (max-width: 900px) {
     .containerStyles {
       width: 70%;
+    }
+    .slideCount{
+      bottom: 30px;
     }
   }
   @media screen and (max-width: 800px) {
@@ -66,6 +79,9 @@
       width: 80%;
       height: 350px;
       margin: 0px 60px;
+    }
+    .slideCount{
+      bottom: 30px;
     }
   }
   @media screen and (max-width: 600px) {
