--- a/src/styles/Contact.css
+++ b/src/styles/Contact.css
@@ -1,28 +1,31 @@
 .contact {
     display: flex;
     flex-direction: column;
-    align-items: center;
     color: #0e2c63;
     justify-content: center;
-    padding-bottom: 50px;
+    margin: 10px;
+    padding: 15px 5%;
+    font-size: 20px;
 }
 .contact-title {
-    font-size: 24px;
-    padding-bottom: 35px;
-}
-.contact p {
-    padding: 0px 40px;
-    line-height: 24px;
-    font-size: 18px;
+    font-size: 36px;
+    color: #0e2c63;
+    padding: 20px 0px 50px 0px;
+    align-self: center;
 }
 .contact a {
     text-decoration: none;
 }
 .contact a:hover {
-    font-size: 20px;
+text-decoration: underline;
 }
 .contact a:visited {
     color: #0e2c63;
+}
+.goodbye {
+    align-self: center;
+    font-size: 24px;
+    padding: 50px 0px;
 }
 @media screen and (max-width: 800px) {
     .contact-title {
