--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -20,79 +20,102 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  padding-inline-start: 0px;
 }
 .header-nav li {
   list-style-type: none;
   color:#0e2c63;
-  font-size: 20px;
-  font-weight: 500;
-  line-height: 34px;
-  margin-inline-start: 30px;
+    margin : 0px 15px;
 }
-.header-nav li a:hover {
-  font-size: 22px;
+.nav-img {
+  height: 40px;
+  width: auto;
 }
-.header-nav li a {
-  text-decoration: none;
-  color:#0e2c63;
+.nav-container {
+  cursor: pointer;
+  overflow:visible;
+    width: 40px;
+  height: 30px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
 }
+.nav-container .text {
+  -webkit-transition: all 300ms ease-out;
+  -moz-transition: all 300ms ease-out;
+  -o-transition: all 300ms ease-out;
+  -ms-transition: all 300ms ease-out;
+  transition: all 300ms ease-out;
+  transform: translateY(30px);
+  -webkit-transform: translateY(30px);
+
+}
+.nav-container .nav {
+  font-size: 10PX;
+  text-transform: uppercase;
+  opacity: 0;
+  transition-delay: 0.2s;
+  transition-duration: 0.3s;
+  align-items: center;
+}
+.nav-container:hover .nav{
+  opacity: 1;
+  transform: translateY(0px);
+  -webkit-transform: translateY(0px);
+}
+
 @media screen and (max-width: 950px) {
   .header-nav li {
     margin-inline-start: 24px;
+  }
+  .nav-img {
+    height: 40px;
+  }
+  .nav-container {
+    width: 40px;
+    height: 30px;
   }
 }
 @media screen and (max-width: 800px) {
   .header{
     margin: 40px 80px;
   }
-  .header-nav li, .header a {
-    font-size: 16px;
+  .header-home {
+    display: none;
   }
-  .header-nav li a:hover {
-    font-size: 18px;
+  .header-nav {
+    width: 100%;
+    justify-content: center;
   }
 }
 @media screen and (max-width: 700px) {
   .header{
     margin: 30px 60px;
   }
-  .header-nav li, .header a {
-    font-size: 14px;
-  }
-  .header-nav li a:hover {
-    font-size: 16px;
-  }
 }
 @media screen and (max-width: 600px) {
   .header{
     margin: 20px 40px;
   }
-  .header-nav li, .header a {
-    font-size: 12px;
+  .nav-img {
+    height: 30px;
   }
-  .header-nav li{
-    margin-inline-start: 8px;
-  }
-  .header-nav li a:hover {
-    font-size: 14px;
+  .nav-container {
+    width: 30px;
+    height: 20px;
   }
 }
 @media screen and (max-width: 500px) {
   .header{
     margin: 15px 30px;
   }
+  .header-nav li {
+    margin : 0px 10px;
+  }
 }
 @media screen and (max-width: 450px) {
   .header{
     margin: 10px 20px;
-  }
-  .header-nav li, .header a {
-    font-size: 10px;
-  }
-  .header-nav li{
-    margin-inline-start: 6px;
-  }
-  .header-nav li a:hover {
-    font-size: 12px;
   }
 }
